--- a/index.html
+++ b/index.html
@@ -2,16 +2,34 @@
 
 <html>
     <head>
+        <!--ATDAPI ID: 213 -->
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>ToDo</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="./styles.css">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">        <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+        crossorigin="anonymous"></script>
     </head>
     <body>
-        
-        
+        <div class="container">
+            <div class="row">
+              <div class="col-xs-12">
+                <h2>To Do List</h2>
+                <div id='todo-list'>
+
+                </div>
+
+                <form id="create-task">
+                    <input id="new-task-content" type="text" placeholder="new task" required/>
+                    <button>Create</button>
+                  </form>
+              </div>
+            </div>
+          </div>
+
         <script src="script.js" async defer></script>
     </body>
 </html>
