--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
         <title>ToDo</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Fuzzy+Bubbles:wght@400;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="./styles.css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">        <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
@@ -17,9 +20,9 @@
         <div class="container">
             <div class="row">
               <div class="col-xs-12">
-                <h2>To Do List</h2>
+                <h2 id="main-heading"><span id="to">To<br></span> <span id="do">Do<br></span> <span id="list">List<br></span></h2>
                 <div id='todo-list'>
-
+                  
                 </div>
 
                 <form id="create-task">
